apps/arr/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/name: bazarr
spec:
  type: ClusterIP
  ports:
  - port: 6767
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: bazarr
